tdf#90968: Highlighting is not repeated with Ctrl+Shft+Y (Edit>Repeat)

Regression from:
08cfbbaca2d23727bc95912082ae46b8f8a37f03

Use undo actions to make the shell handle all of the background
related changes in one piece.

Change-Id: Ia2b64267727693f663ace5daf1dc094a663ea345